[package]
name = "linux-media"
version = "0.1.0"
edition = "2024"
authors = ["eldesh <nephits@gmail.com>"]
description = "A Rust library providing access to the Linux Media Subsystem."
license = "MIT"
readme = "README.md"
repository = "https://github.com/eldesh/linux-media"


[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
linux-media-sys = "0.2.0"
libc = "0.2.170"
derive_more = { version = "2.0.1", features = ["full"] }

