[package]
name = "linux-media"
version = "0.2.0"
edition = "2021"
rust_version = "1.75.0"
authors = ["eldesh <nephits@gmail.com>"]
description = "A Rust library providing access to the Linux Media Subsystem."
license = "MIT"
readme = "README.md"
repository = "https://github.com/eldesh/linux-media"
categories = [
  "api-bindings",
  "os::linux-apis"
]

[dependencies]
linux-media-sys = "=0.4.1"
bitflags = { version = "=2.9.0", features = ["serde"] }
libc = "=0.2.170"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
autocfg = "0.1"

[dev-dependencies]
regex = { version = "=1.11.1", features = ["std"] }

